--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -1,28 +1,28 @@
-#- name: install additional dbservers package
- # yum: name={{item}} state=latest
- # with_items:
- # - mariadb-server
- # - MySQL-python
- #- firewalld
+- name: install additional dbservers package
+  yum: name={{item}} state=latest
+  with_items:
+  - mariadb-server
+  - MySQL-python
+  - firewalld
 
-#- name: create mariadb configuration file
- # template: src=my.cnf.j2 dest=/etc/my.cnf
-#  notify: restart mariadb
+- name: create mariadb configuration file
+  template: src=my.cnf.j2 dest=/etc/my.cnf
+  notify: restart mariadb
 
-#- name: create mariadb log file
-#  file: path=/var/log/mariadb/mariadb.log state=touch owner=mysql group=mysql
+- name: create mariadb log file
+  file: path=/var/log/mariadb/mariadb.log state=touch owner=mysql group=mysql
 
-#- name: create mariadb PID directory
-#  file: path=/var/run/mariadb/  state=directory owner=mysql group=mysql
+- name: create mariadb PID directory
+  file: path=/var/run/mariadb/  state=directory owner=mysql group=mysql
 
-#- name: start mariadb service  
- # service: name=mariadb state=started enabled=yes
+- name: start mariadb service
+  service: name=mariadb state=started enabled=yes
 
-#- name: start firewalld service
-#  service: name=firewalld  enabled=yes
+- name: start firewalld service
+  service: name=firewalld  enabled=yes
 
-#- name: insert firewalld rule
-#  firewalld: port={{mysql_port}}/tcp permanent=true state=enabled 
+- name: insert firewalld rule
+  firewalld: port={{mysql_port}}/tcp permanent=true state=enabled 
 
 - name: copy mariadb root password file
   template: src=.my.cnf.j2 dest=~/.my.cnf
